--- a/style/style.css
+++ b/style/style.css
@@ -243,7 +243,7 @@ body {
 .img__block__2 .first__img {
   height: 338px;
   width: 370px;
-  background-image: url(/img/Rectangle\ 4.svg);
+  background-image: url(./img/Rectangle\ 4.svg);
   background-position: center center;
   background-size: cover;
   overflow: hidden;
@@ -251,7 +251,7 @@ body {
 .img__block__2 .second__img {
   height: 338px;
   width: 370px;
-  background-image: url(/img/unsplash_T5nXYXCf50I.svg);
+  background-image: url(./img/unsplash_T5nXYXCf50I.svg);
   background-position: center center;
   background-size: cover;
   overflow: hidden;
@@ -260,7 +260,7 @@ body {
 .img__block__2 .third__img {
   height: 338px;
   width: 370px;
-  background-image: url(/img//unsplash_ACt8ycSzpdE.svg);
+  background-image: url(./img/unsplash_ACt8ycSzpdE.svg);
   background-position: center center;
   background-size: cover;
   overflow: hidden;
@@ -416,7 +416,7 @@ body {
   margin-top: 90px;
   max-height: 868px;
   min-width: 100%;
-  background: url("/img/unsplash_lpjb_UMOyx8.svg");
+  background: url("./img/unsplash_lpjb_UMOyx8.svg");
   background-position: center center;
   background-size: cover;
   overflow: hidden;
@@ -426,7 +426,7 @@ body {
   width: 100%;
 }
 .block__4 .block__4__bg .devices .tablet {
-  background-image: url(/img/Daco_624857\ 1.svg);
+  background-image: url(./img/Daco_624857\ 1.svg);
   background-position: 50% 50%;
   min-height: 525px;
   width: 1170px;
@@ -439,7 +439,7 @@ body {
   z-index: 1;
 }
 .block__4 .block__4__bg .devices .tablet__bg {
-  background-image: url(/img/Rectangle\ 10.svg);
+  background-image: url(/./img/Rectangle\ 10.svg);
   background-position: 50% 50%;
   height: 525px;
   max-width: 1170px;
@@ -449,7 +449,7 @@ body {
   z-index: 0;
 }
 .block__4 .block__4__bg .devices .phone {
-  background-image: url(/img/pngwing\ 1.svg);
+  background-image: url(./img/pngwing\ 1.svg);
   background-position: 50% 50%;
   min-height: 525px;
   width: 1170px;
@@ -675,7 +675,7 @@ body::-webkit-scrollbar-track {
   align-items: center;
 }
 .footer__block__5 .rewiew .rewiew__img {
-  background-image: url(/icon/Group —\ копия\ 4.svg);
+  background-image: url(./icon/Group —\ копия\ 4.svg);
   height: 72px;
   width: 72px;
   background-position: center center;
