--- a/style/style.scss
+++ b/style/style.scss
@@ -289,7 +289,7 @@ body {
     .first__img {
         height: 338px;
         width: 370px;
-        background-image: url(/img/Rectangle\ 4.svg);
+        background-image: url(./img/Rectangle\ 4.svg);
         background-position: center center;
         background-size: cover;
         overflow: hidden;
@@ -300,7 +300,7 @@ body {
     .second__img {
         height: 338px;
         width: 370px;
-        background-image: url(/img/unsplash_T5nXYXCf50I.svg);
+        background-image: url(./img/unsplash_T5nXYXCf50I.svg);
         background-position: center center;
         background-size: cover;
         overflow: hidden;
@@ -310,7 +310,7 @@ body {
     .third__img {
         height: 338px;
         width: 370px;
-        background-image: url(/img//unsplash_ACt8ycSzpdE.svg);
+        background-image: url(./img/unsplash_ACt8ycSzpdE.svg);
         background-position: center center;
         background-size: cover;
         overflow: hidden;
@@ -503,7 +503,7 @@ body {
         margin-top: 90px;
         max-height: 868px;
         min-width: 100%;
-        background: url('/img/unsplash_lpjb_UMOyx8.svg');
+        background: url('./img/unsplash_lpjb_UMOyx8.svg');
         background-position: center center;
         background-size: cover;
         overflow: hidden;
@@ -515,7 +515,7 @@ body {
             width: 100%;
 
             .tablet {
-                background-image: url(/img/Daco_624857\ 1.svg);
+                background-image: url(./img/Daco_624857\ 1.svg);
                 background-position: 50% 50%;
                 min-height: 525px;
                 width: 1170px;
@@ -529,7 +529,7 @@ body {
             }
 
             .tablet__bg {
-                background-image: url(/img/Rectangle\ 10.svg);
+                background-image: url(/./img/Rectangle\ 10.svg);
                 background-position: 50% 50%;
                 height: 525px;
                 max-width: 1170px;
@@ -540,7 +540,7 @@ body {
             }
 
             .phone {
-                background-image: url(/img/pngwing\ 1.svg);
+                background-image: url(./img/pngwing\ 1.svg);
                 background-position: 50% 50%;
                 min-height: 525px;
                 width: 1170px;
@@ -779,7 +779,7 @@ body::-webkit-scrollbar-track {
         align-items: center;
 
         .rewiew__img {
-            background-image: url(/icon/Group\ —\ копия\ 4.svg);
+            background-image: url(./icon/Group\ —\ копия\ 4.svg);
             height: 72px;
             width: 72px;
             background-position: center center;
