--- a/style/style.scss
+++ b/style/style.scss
@@ -529,7 +529,7 @@ body {
             }
 
             .tablet__bg {
-                background-image: url(/./img/Rectangle\ 10.svg);
+                background-image: url(./img/Rectangle\ 10.svg);
                 background-position: 50% 50%;
                 height: 525px;
                 max-width: 1170px;
