--- a/style/fonts.css
+++ b/style/fonts.css
@@ -10,6 +10,28 @@
 }
 
 @font-face {
+    font-family: 'RalewayItalic';
+    src: url('../fonts/raleway/Raleway-Italic.woff2') format('woff2'),
+        url('../fonts/raleway/Raleway-Italic.woff') format('woff'),
+        url('../fonts/raleway/Raleway-Italic.eot') format('embedded-opentype'),
+        url('../fonts/raleway/Raleway-Italic.ttf') format('truetype');
+    font-weight: 400;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'RalewayMedium';
+    src: url('../fonts/raleway/Raleway-Medium.woff2') format('woff2'),
+        url('../fonts/raleway/Raleway-Medium.woff') format('woff'),
+        url('../fonts/raleway/Raleway-Medium.eot') format('embedded-opentype'),
+        url('../fonts/raleway/Raleway-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
     font-family: 'RalewaySemiBold';
     src: url('../fonts/raleway/Raleway-SemiBold.woff2') format('woff2'),
         url('../fonts/raleway/Raleway-SemiBold.woff') format('woff'),
@@ -27,6 +49,28 @@
         url('../fonts/raleway/Raleway-Bold.eot') format('embedded-opentype'),
         url('../fonts/raleway/Raleway-Bold.ttf') format('truetype');
     font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'RalewayExtraBold';
+    src: url('../fonts/raleway/Raleway-ExtraBold.woff2') format('woff2'),
+        url('../fonts/raleway/Raleway-ExtraBold.woff') format('woff'),
+        url('../fonts/raleway/Raleway-ExtraBold.eot') format('embedded-opentype'),
+        url('../fonts/raleway/Raleway-ExtraBold.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'RalewayBlack';
+    src: url('../fonts/raleway/Raleway-Black.woff2') format('woff2'),
+        url('../fonts/raleway/Raleway-Black.woff') format('woff'),
+        url('../fonts/raleway/Raleway-Black.eot') format('embedded-opentype'),
+        url('../fonts/raleway/Raleway-Black.ttf') format('truetype');
+    font-weight: 900;
     font-style: normal;
     font-display: swap;
 }
